add initial html structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <img src="https://placehold.co/200x70?text=200+x+70" alt="logo">
+      <a href="#">Nav Item 1</a>
+      <a href="#">Nav Item 2</a>
+      <a href="#">Nav Item 3</a>
+      <a href="#">Nav Item 4</a>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <img src="https://placehold.co/960x450?text=960+x+450" alt="hero">
+    </section>
+    <section>
+      <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
+      <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
+      <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
+    </section>
+    <section>
+      <img src="https://placehold.co/480x400?text=480+x+400" alt="featured section">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus et architecto molestiae laborum recusandae iure, assumenda facilis dolorum non vero quasi doloribus, repudiandae atque nostrum dignissimos quos necessitatibus eaque ut? Doloribus eius minus facere pariatur praesentium facilis? Illum sint ex iure consequuntur reiciendis, rerum iusto officia voluptatum et cum perspiciatis temporibus quod deserunt est? Ducimus, voluptatem dignissimos. Iste nam quae libero minus sed sunt ipsa? Fugiat temporibus quia iusto possimus atque eaque voluptatem odit voluptates excepturi, sit laborum quasi corporis qui quidem ducimus nulla repudiandae, nesciunt earum accusamus? Expedita accusantium et praesentium debitis excepturi facilis exercitationem quae magnam dicta voluptates.</p>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
