--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section id="hero">
       <img src="https://placehold.co/960x450?text=960+x+450" alt="hero">
     </section>
-    <section>
+    <section id="banner">
       <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
       <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
       <img src="https://placehold.co/300x375?text=300+x+375" alt="sub banner">
     </section>
-    <section>
+    <section id="featured">
       <img src="https://placehold.co/480x400?text=480+x+400" alt="featured section">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus et architecto molestiae laborum recusandae iure, assumenda facilis dolorum non vero quasi doloribus, repudiandae atque nostrum dignissimos quos necessitatibus eaque ut? Doloribus eius minus facere pariatur praesentium facilis? Illum sint ex iure consequuntur reiciendis, rerum iusto officia voluptatum et cum perspiciatis temporibus quod deserunt est? Ducimus, voluptatem dignissimos. Iste nam quae libero minus sed sunt ipsa? Fugiat temporibus quia iusto possimus atque eaque voluptatem odit voluptates excepturi, sit laborum quasi corporis qui quidem ducimus nulla repudiandae, nesciunt earum accusamus? Expedita accusantium et praesentium debitis excepturi facilis exercitationem quae magnam dicta voluptates.</p>
+      <div id="callToAction">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quos facilis amet iure officia nemo laborum, fugiat molestiae aut ipsa quisquam quasi doloremque culpa? Aliquid cupiditate sunt fugiat dolores, eligendi cum numquam in nisi esse minus sapiente molestias nostrum similique et eaque. Optio assumenda veniam nisi numquam expedita ad culpa asperiores, voluptatibus velit, delectus placeat. Numquam tempore natus maiores in laudantium. Voluptatibus adipisci recusandae totam deleniti iste alias ex, debitis reiciendis aspernatur itaque placeat earum numquam natus dolor, necessitatibus repellendus quia fugit doloribus impedit. Quo aliquam placeat neque quod corporis dignissimos quaerat porro optio expedita distinctio deserunt iusto dicta eveniet nostrum, praesentium, perspiciatis maiores animi, eligendi nisi laborum? Id cumque excepturi tempora molestias? Quos modi distinctio inventore aliquam nemo illum, vitae blanditiis optio sed minima fuga consequatur, esse voluptate voluptatum? Pariatur, ullam similique. Neque iure assumenda recusandae deleniti commodi rerum numquam vero minima consequatur sapiente sequi repellat, doloribus suscipit soluta ducimus, fugiat eaque? Non, ex doloremque. Quibusdam molestias dolores perferendis. Deleniti ullam, perspiciatis eos animi atque totam? Nam necessitatibus, quibusdam numquam corporis saepe nemo omnis facilis molestias consectetur incidunt tenetur officia culpa harum deleniti atque recusandae. Animi optio veritatis inventore doloremque enim, ipsam, alias tempora, earum eveniet vero excepturi expedita.</p>
+        <button>Call to Action</button>
+      </div>
+
     </section>
   </main>
   <footer></footer>
